--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,19 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap);
+
 body {
   margin: 0;
   height: 100%;
   overflow: hidden;
   background-color: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 :root {
   --background: #303130;
   --dark-1: #3a3a3a;
+  --light-1: #919191;
 
   --yellow: #efc31d;
   --green: #30ac63;
@@ -23,4 +21,6 @@ code {
   --red: #e54d42;
   --purple: #8c48aa;
   --orange: #e37f31;
+  --white: #fff;
+  --black: #000;
 }
