styling changes to modal

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -14,10 +14,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: relative;
   height: fit-content;
   gap: 16px;
   width: 240px;
+  min-height: 180px;
   margin-top: 15%;
   padding: 20px;
 
